# controllers/bids/addBid.js
@@ -1,0 +1,35 @@
+import mysql from "mysql"
+
+export const addBid = async (req, res) => {
+    const name  = req.body.myName
+    const price = req.body.price
+    const post_title = req.body.title
+    /* #swagger.tags = ['Bids']
+    #swagger.description = 'Add a new bid for a post' */
+    var query = `INSERT INTO BID (PRICE, ITEM_ID, USER_NAME) VALUES ( ? , ? , ?);`;
+    var query_2 = `SELECT * FROM ITEM JOIN POST ON ITEM.POST_TITLE = POST.POST_TITLE WHERE POST.POST_TITLE = ?`
+
+    var db = mysql.createConnection({
+        // Change it to the public IP generated by ngrok
+        host: "127.0.0.1",
+        port: process.env.DB_PORT,
+        user: "root",
+        password: "123456",
+        database: "ShopDB",
+        multipleStatements: true
+    })
+
+    db.connect();
+
+    db.query(query_2, [post_title], (err, rows)=>{
+      if (err) throw err;
+      // console.log(rows);
+      db.query(query, [price, rows[0].ITEM_ID.toString(), name], (err, rows_b) => {
+        if (err) throw err
+        // console.log(`SQL query: ${query}`)
+        return res.status(200).json({message: "success!"});
+      });    
+    })
+
+    // db.end();
+}
