# controllers/bids/getBid.js
@@ -1,0 +1,37 @@
+import mysql from "mysql"
+
+export const getBid = async (req, res) => {
+  /* #swagger.tags = ['Bids']
+  #swagger.description = 'Get bids from one post' */
+  var query = `
+  SELECT * FROM ITEM JOIN BID ON ITEM.ITEM_ID = BID.ITEM_ID 
+  JOIN POST ON ITEM.POST_TITLE = ITEM.POST_TITLE WHERE POST.POST_TITLE =?`;
+
+  var db = mysql.createConnection({
+    // connectTimeout  : 60 * 60 * 1000,
+    // Change it to the public IP generated by ngrok
+    host: "127.0.0.1",
+    port: process.env.DB_PORT,
+    user: "root",
+    password: "123456",
+    database: "ShopDB",
+    multipleStatements: true
+  })
+  db.connect();
+
+  db.query(query, [req.params.title], (err, rows) => {
+    if (err) throw err;
+    console.log(rows)
+    const allbids = rows.map((row) => {
+      return {
+        whoBids: row.USER_NAME,
+        bPrice: row.PRICE
+      }
+    })
+    Promise.all(allbids).then((results)=>{
+      console.log(results)
+      return res.status(200).json({ bids: results });
+    })
+  })
+  // db.end();
+}
