# controllers/posts/addPost.js
@@ -1,7 +1,7 @@
 import mysql from "mysql"
 
 export const addPost = async (req, res) => {
-    const seller = req.body.seller
+    const seller = req.body.myName
     const post_title = req.body.title
     const content = req.body.content
     const price = req.body.price
@@ -12,17 +12,13 @@ export const addPost = async (req, res) => {
     INSERT INTO ITEM (PRICE, IMAGE, POST_TITLE) VALUES (?,?,?);
     `;
 
-    // 模板語法: `stringstring str str ${variable}` // 要是``，"" 沒有模板語法
-
-
     var db = mysql.createConnection({
-        // connectTimeout  : 60 * 60 * 1000,
         // Change it to the public IP generated by ngrok
         host: "127.0.0.1",
         port: process.env.DB_PORT,
         user: "root",
         password: "123456",
-        database: "shoppingDB",
+        database: "ShopDB",
         multipleStatements: true
     })
 
@@ -30,7 +26,7 @@ export const addPost = async (req, res) => {
     db.query(query, [post_title, content, seller, price, img, post_title], (err, rows) => {
         if (err) throw err
         // console.log(`SQL query: ${query}`)
-        console.log(rows)
+        // console.log(rows)
         return res.status(200).json({ message: "Success!" });
     });
     db.end();
