# controllers/posts/getPersonPosts.js
@@ -3,29 +3,37 @@ import mysql from "mysql"
 export const getPersonPosts = async (req, res) => {
   /* #swagger.tags = ['Posts']
   #swagger.description = 'Get one's posts' */
-  var query = 'SELECT * FROM POST WHERE SELLER_NAME = ? ';
+  var query = 'SELECT * FROM ITEM INNER JOIN POST ON ITEM.POST_TITLE = POST.POST_TITLE WHERE SELLER_NAME = ? ';
 
   // 模板語法: `stringstring str str ${variable}` // 要是``，"" 沒有模板語法
 
 
   var db = mysql.createConnection({
-    // connectTimeout  : 60 * 60 * 1000,
     // Change it to the public IP generated by ngrok
     host: "127.0.0.1",
     port: process.env.DB_PORT,
     user: "root",
     password: "123456",
-    database: "shoppingDB"
+    database: "ShopDB"
   })
 
   db.connect();
-  db.query(query, [req.params.name]/* 前端傳的時候叫做myName */, function (err, rows, fields) {
+  db.query(query, [req.params.myName], async (err, rows, fields) => {
     if (err) throw err;
+    const allPosts = rows.map(async (row) => {
+      return {
+        postSeller: row.SELLER_NAME,
+        postTitle: row.POST_TITLE,
+        postContent: row.CONTENT,
+        recommendedPrice: row.PRICE, 
+        postImg: row.IMAGE, 
+      }
+    })
 
-    console.log(`${req.params.name}'s profile: `)
-    console.log(`SQL query: ${query}`)
-    console.log(rows)
-    return res.status(200).json(rows);
+    Promise.all(allPosts).then((results) => {
+      console.log(results)
+      return res.status(200).json({ posts: results });
+    })
   });
   db.end();
 }
